--- a/css/publicshare.scss
+++ b/css/publicshare.scss
@@ -215,6 +215,15 @@
 	height: calc(100% - 100px);
 }
 
+#talk-sidebar #call-container-wrapper #call-container.screensharing .videoContainer {
+	max-height: 100px;
+
+	/* Avatars slightly overflow the container; although they overlap the shared
+	 * screen it is not too bad and it is better than compressing even further
+	 * the shared screen. */
+	overflow: visible;
+}
+
 
 
 #talk-sidebar #videos .videoContainer:not(.promoted) video {
